--- a/game1666proto/game1666proto/game1666proto.csproj
+++ b/game1666proto/game1666proto/game1666proto.csproj
@@ -109,7 +109,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="Game.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
