Added City and Building classes, and did a bit of reformatting.

--- a/game1666proto/game1666proto/game1666proto.csproj
+++ b/game1666proto/game1666proto/game1666proto.csproj
@@ -107,6 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building.cs" />
+    <Compile Include="City.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
