--- a/game1666proto/game1666proto/game1666proto.csproj
+++ b/game1666proto/game1666proto/game1666proto.csproj
@@ -16,8 +16,8 @@
     <XnaProfile>HiDef</XnaProfile>
     <XnaCrossPlatformGroupID>3b76a4b9-48f9-413c-a790-b997f612d823</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
-    <ApplicationIcon>Game.ico</ApplicationIcon>
-    <Thumbnail>GameThumbnail.png</Thumbnail>
+    <ApplicationIcon>Support Files\Game.ico</ApplicationIcon>
+    <Thumbnail>Support Files\GameThumbnail.png</Thumbnail>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -114,8 +114,8 @@
     <Compile Include="Game.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Game.ico" />
-    <Content Include="GameThumbnail.png" />
+    <Content Include="Support Files\Game.ico" />
+    <Content Include="Support Files\GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\game1666protoContent\game1666protoContent.contentproj">
