Added a new class to manage mouse events.

--- a/game1666proto/game1666proto/game1666proto.csproj
+++ b/game1666proto/game1666proto/game1666proto.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Building.cs" />
     <Compile Include="City.cs" />
+    <Compile Include="MouseEventManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
