Did a bit of tidying up.

--- a/game1666proto2/game1666proto2/game1666proto2.csproj
+++ b/game1666proto2/game1666proto2/game1666proto2.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building.cs" />
     <Compile Include="City.cs" />
     <Compile Include="MouseEventManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
