Continued tidying up.

--- a/game1666proto2/game1666proto2/game1666proto2.csproj
+++ b/game1666proto2/game1666proto2/game1666proto2.csproj
@@ -109,7 +109,9 @@
   <ItemGroup>
     <Compile Include="Building.cs" />
     <Compile Include="City.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="MouseEventManager.cs" />
+    <Compile Include="PickedTriangle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
