Adding a static RenderingDetails class to make it easier to access things like the graphics device, and started work on entity placement.

--- a/game1666proto3/game1666proto3/game1666proto3.csproj
+++ b/game1666proto3/game1666proto3/game1666proto3.csproj
@@ -108,6 +108,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RenderingDetails.cs" />
     <Compile Include="Math\Constants.cs" />
     <Compile Include="Model\Building.cs" />
     <Compile Include="Model\BuildingFactory.cs" />
