Renamed BuildingFootprint to Footprint.

--- a/game1666proto3/game1666proto3/game1666proto3.csproj
+++ b/game1666proto3/game1666proto3/game1666proto3.csproj
@@ -112,7 +112,7 @@
     <Compile Include="Math\Constants.cs" />
     <Compile Include="Model\Building.cs" />
     <Compile Include="Model\BuildingFactory.cs" />
-    <Compile Include="Model\BuildingFootprint.cs" />
+    <Compile Include="Model\Footprint.cs" />
     <Compile Include="Model\City.cs" />
     <Compile Include="Model\ICompositeModelEntity.cs" />
     <Compile Include="Model\IModelEntity.cs" />
