--- a/game1666proto3/game1666proto3/game1666proto3.csproj
+++ b/game1666proto3/game1666proto3/game1666proto3.csproj
@@ -108,12 +108,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\EntityOrientation.cs" />
     <Compile Include="Model\IPlaceableModelEntity.cs" />
     <Compile Include="RenderingDetails.cs" />
     <Compile Include="Math\Constants.cs" />
     <Compile Include="Model\Building.cs" />
     <Compile Include="Model\BuildingFactory.cs" />
-    <Compile Include="Model\Footprint.cs" />
+    <Compile Include="Model\EntityFootprint.cs" />
     <Compile Include="Model\City.cs" />
     <Compile Include="Model\ICompositeModelEntity.cs" />
     <Compile Include="Model\IModelEntity.cs" />
