Added a first version of Vector2i, and continued working on PlaceableModelEntity.ConstructBuffers().

--- a/game1666proto3/game1666proto3/game1666proto3.csproj
+++ b/game1666proto3/game1666proto3/game1666proto3.csproj
@@ -111,6 +111,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Math\Vectors\Vector2i.cs" />
     <Compile Include="Model\EntityOrientation.cs" />
     <Compile Include="Model\PlaceableModelEntity.cs" />
     <Compile Include="RenderingDetails.cs" />
