--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -114,6 +114,7 @@
   <ItemGroup>
     <Content Include="Support Files\Game.ico" />
     <Content Include="Support Files\GameThumbnail.png" />
+    <Content Include="Support Files\GameConfig.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\game1666proto4Content\game1666proto4Content.contentproj">
@@ -147,6 +148,14 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Support Files\GameConfig.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Support Files\SaveGame.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
