--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
@@ -114,7 +115,6 @@
   <ItemGroup>
     <Content Include="Support Files\Game.ico" />
     <Content Include="Support Files\GameThumbnail.png" />
-    <Content Include="Support Files\GameConfig.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\game1666proto4Content\game1666proto4Content.contentproj">
