--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -107,7 +107,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GameConfig.cs" />
+    <Compile Include="Config\Blueprint.cs" />
+    <Compile Include="Config\GameConfig.cs" />
+    <Compile Include="Model\House.cs" />
+    <Compile Include="Config\HouseBlueprint.cs" />
+    <Compile Include="Model\IBuilding.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
