--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -114,6 +114,8 @@
     <Compile Include="Config\EntityBlueprint.cs" />
     <Compile Include="Config\GameConfig.cs" />
     <Compile Include="Config\RoadSegmentBlueprint.cs" />
+    <Compile Include="Math\Constants.cs" />
+    <Compile Include="Math\Geometry\Triangle.cs" />
     <Compile Include="Math\Vectors\Vector2i.cs" />
     <Compile Include="Model\City.cs" />
     <Compile Include="Model\House.cs" />
@@ -122,8 +124,8 @@
     <Compile Include="Model\PlayingArea.cs" />
     <Compile Include="Model\RoadNetwork.cs" />
     <Compile Include="Model\RoadSegment.cs" />
-    <Compile Include="Model\Terrain.cs" />
-    <Compile Include="Model\TerrainMesh.cs" />
+    <Compile Include="Model\Terrain\QuadtreeNode.cs" />
+    <Compile Include="Model\Terrain\Terrain.cs" />
     <Compile Include="Model\World.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
