--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -131,7 +131,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="RenderingDetails.cs" />
+    <Compile Include="Renderer.cs" />
     <Compile Include="View\PlayingAreaViewer.cs" />
   </ItemGroup>
   <ItemGroup>
