--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -118,9 +118,11 @@
     <Compile Include="Math\Geometry\Triangle.cs" />
     <Compile Include="Math\Vectors\Vector2i.cs" />
     <Compile Include="Model\City.cs" />
+    <Compile Include="Model\CompositeModelEntity.cs" />
     <Compile Include="Model\House.cs" />
     <Compile Include="Config\HouseBlueprint.cs" />
     <Compile Include="Model\IBuilding.cs" />
+    <Compile Include="Model\ModelEntity.cs" />
     <Compile Include="Model\PlayingArea.cs" />
     <Compile Include="Model\RoadNetwork.cs" />
     <Compile Include="Model\RoadSegment.cs" />
