Got mouse clicking working in order to test QuadtreeNode.PickGridSquare.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,6 +164,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Input\MouseEventManager.cs" />
     <Compile Include="Math\MathUtil.cs" />
     <Compile Include="Model\Config\GameConfig.cs" />
     <Compile Include="Model\Config\RoadSegmentBlueprint.cs" />
