--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Renderer.cs" />
     <Compile Include="View\Camera.cs" />
     <Compile Include="View\PlayingAreaViewer.cs" />
+    <Compile Include="View\PlayingAreaSidebar.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Support Files\Game.ico" />
