--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -172,11 +172,11 @@
     <Compile Include="Math\Geometry\Triangle.cs" />
     <Compile Include="Math\Vectors\Vector2i.cs" />
     <Compile Include="Model\City.cs" />
-    <Compile Include="Model\CompositeModelEntity.cs" />
+    <Compile Include="CompositeEntity.cs" />
     <Compile Include="Model\House.cs" />
     <Compile Include="Model\Config\HouseBlueprint.cs" />
     <Compile Include="Model\Building.cs" />
-    <Compile Include="Model\ModelEntity.cs" />
+    <Compile Include="Entity.cs" />
     <Compile Include="Model\PlayingArea.cs" />
     <Compile Include="Model\RoadNetwork.cs" />
     <Compile Include="Model\RoadSegment.cs" />
