--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -191,7 +191,7 @@
     <Compile Include="SceneGraph.cs" />
     <Compile Include="View\Camera.cs" />
     <Compile Include="View\PlayingAreaViewer.cs" />
-    <Compile Include="View\PlayingAreaSidebar.cs" />
+    <Compile Include="View\SidebarViewer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Support Files\Game.ico" />
