Introduced the ViewUtil class ready to parse viewport specifiers.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -194,6 +194,7 @@
     <Compile Include="View\SidebarViewer.cs" />
     <Compile Include="View\View.cs" />
     <Compile Include="View\ViewManager.cs" />
+    <Compile Include="View\ViewUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Support Files\Game.ico" />
