--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,6 +164,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\CompositeModelEntity.cs" />
+    <Compile Include="Entities\CompositeViewEntity.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\EntityUtil.cs" />
+    <Compile Include="Entities\ViewEntity.cs" />
     <Compile Include="Input\MouseEventManager.cs" />
     <Compile Include="Math\MathUtil.cs" />
     <Compile Include="Model\Config\BlueprintManager.cs" />
@@ -172,11 +177,9 @@
     <Compile Include="Math\Geometry\Triangle.cs" />
     <Compile Include="Math\Vectors\Vector2i.cs" />
     <Compile Include="Model\City.cs" />
-    <Compile Include="CompositeEntity.cs" />
     <Compile Include="Model\House.cs" />
     <Compile Include="Model\Config\HouseBlueprint.cs" />
     <Compile Include="Model\Building.cs" />
-    <Compile Include="Entity.cs" />
     <Compile Include="Model\PlayingArea.cs" />
     <Compile Include="Model\RoadNetwork.cs" />
     <Compile Include="Model\RoadSegment.cs" />
