Renamed View to GameView.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -195,7 +195,7 @@
     <Compile Include="View\Camera.cs" />
     <Compile Include="View\PlayingAreaViewer.cs" />
     <Compile Include="View\SidebarViewer.cs" />
-    <Compile Include="View\View.cs" />
+    <Compile Include="View\GameView.cs" />
     <Compile Include="View\ViewManager.cs" />
     <Compile Include="View\ViewUtil.cs" />
   </ItemGroup>
