--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -165,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\CompositeModelEntity.cs" />
+    <Compile Include="View\Button.cs" />
     <Compile Include="View\CompositeViewEntity.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EntityUtil.cs" />
