Started refining how the blueprints are going to work.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,6 +164,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Blueprints\Blueprint.cs" />
     <Compile Include="Model\CompositeModelEntity.cs" />
     <Compile Include="View\Button.cs" />
     <Compile Include="View\CompositeViewEntity.cs" />
