Introduced the IPlaceableModelEntity interface and made Building implement it - this will later need to be implemented by RoadSegment and City as well.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Model\Blueprints\Blueprint.cs" />
     <Compile Include="Model\Blueprints\BlueprintModels.cs" />
     <Compile Include="Model\CompositeModelEntity.cs" />
+    <Compile Include="Model\IPlaceableModelEntity.cs" />
     <Compile Include="View\Button.cs" />
     <Compile Include="View\CompositeViewEntity.cs" />
     <Compile Include="Entity.cs" />
