--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -167,7 +167,7 @@
     <Compile Include="Model\Blueprints\Blueprint.cs" />
     <Compile Include="Model\Blueprints\BlueprintModels.cs" />
     <Compile Include="Model\CompositeModelEntity.cs" />
-    <Compile Include="Model\IPlaceableModelEntity.cs" />
+    <Compile Include="Model\IBuildableModelEntity.cs" />
     <Compile Include="View\Button.cs" />
     <Compile Include="View\CompositeViewEntity.cs" />
     <Compile Include="Entity.cs" />
