Started reworking the entity hierarchy.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,10 +164,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBuildableEntity.cs" />
+    <Compile Include="IUpdateableEntity.cs" />
+    <Compile Include="IVisibleEntity.cs" />
     <Compile Include="Model\Blueprints\Blueprint.cs" />
+    <Compile Include="CompositeEntity.cs" />
     <Compile Include="Model\CompositeModelEntity.cs" />
     <Compile Include="Model\EntityBuilder.cs" />
-    <Compile Include="Model\IBuildableModelEntity.cs" />
+    <Compile Include="IEntity.cs" />
     <Compile Include="View\Button.cs" />
     <Compile Include="View\CompositeViewEntity.cs" />
     <Compile Include="Entity.cs" />
