--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,18 +164,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\IPlaceableEntity.cs" />
-    <Compile Include="IUpdateableEntity.cs" />
-    <Compile Include="View\IVisibleEntity.cs" />
+    <Compile Include="Entities\IPlaceableEntity.cs" />
+    <Compile Include="Entities\IUpdateableEntity.cs" />
+    <Compile Include="Entities\IVisibleEntity.cs" />
     <Compile Include="Model\Blueprints\Blueprint.cs" />
-    <Compile Include="CompositeEntity.cs" />
-    <Compile Include="CompositeUpdatableEntity.cs" />
-    <Compile Include="Model\EntityFSM.cs" />
-    <Compile Include="IEntity.cs" />
+    <Compile Include="Entities\CompositeEntity.cs" />
+    <Compile Include="Entities\CompositeUpdatableEntity.cs" />
+    <Compile Include="Entities\EntityFSM.cs" />
+    <Compile Include="Entities\IEntity.cs" />
     <Compile Include="View\Button.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="EntityUtil.cs" />
-    <Compile Include="View\CompositeVisibleEntity.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\EntityUtil.cs" />
+    <Compile Include="Entities\CompositeVisibleEntity.cs" />
     <Compile Include="Input\MouseEventManager.cs" />
     <Compile Include="Math\MathUtil.cs" />
     <Compile Include="Model\Blueprints\BlueprintManager.cs" />
@@ -204,7 +204,7 @@
     <Compile Include="View\SidebarViewer.cs" />
     <Compile Include="View\GameView.cs" />
     <Compile Include="View\ViewManager.cs" />
-    <Compile Include="View\VisibleEntity.cs" />
+    <Compile Include="Entities\VisibleEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Support Files\Game.ico" />
