Implemented a first draft of FiniteStateMachine.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Entities\IPlaceableEntity.cs" />
     <Compile Include="Entities\IUpdateableEntity.cs" />
     <Compile Include="Entities\IVisibleEntity.cs" />
+    <Compile Include="FSMs\FiniteStateMachine.cs" />
     <Compile Include="Model\Blueprints\Blueprint.cs" />
     <Compile Include="Entities\CompositeEntity.cs" />
     <Compile Include="Entities\CompositeUpdatableEntity.cs" />
