--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -176,7 +176,7 @@
     <Compile Include="Entities\CompositeUpdatableEntity.cs" />
     <Compile Include="Entities\FSM\EntityFSM.cs" />
     <Compile Include="Entities\IEntity.cs" />
-    <Compile Include="Model\EntityFootprint.cs" />
+    <Compile Include="Model\Footprint.cs" />
     <Compile Include="View\Button.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\EntityUtil.cs" />
