--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -164,43 +164,43 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\FSMs\EntityInConstructionState.cs" />
-    <Compile Include="Model\FSMs\EntityOperatingState.cs" />
-    <Compile Include="Model\IPlaceableEntity.cs" />
+    <Compile Include="GameModel\FSMs\EntityInConstructionState.cs" />
+    <Compile Include="GameModel\FSMs\EntityOperatingState.cs" />
+    <Compile Include="GameModel\IPlaceableEntity.cs" />
     <Compile Include="Common\Entities\IUpdateableEntity.cs" />
     <Compile Include="UI\IVisibleEntity.cs" />
     <Compile Include="Common\FSMs\FiniteStateMachine.cs" />
     <Compile Include="Common\FSMs\IFSMState.cs" />
-    <Compile Include="Model\FSMs\EntityStateID.cs" />
+    <Compile Include="GameModel\FSMs\EntityStateID.cs" />
     <Compile Include="Common\Maths\Orientation4.cs" />
-    <Compile Include="Model\Blueprints\Blueprint.cs" />
+    <Compile Include="GameModel\Blueprints\Blueprint.cs" />
     <Compile Include="Common\Entities\CompositeEntity.cs" />
     <Compile Include="Common\Entities\CompositeUpdatableEntity.cs" />
-    <Compile Include="Model\FSMs\EntityFSM.cs" />
+    <Compile Include="GameModel\FSMs\EntityFSM.cs" />
     <Compile Include="Common\Entities\IEntity.cs" />
-    <Compile Include="Model\Footprint.cs" />
+    <Compile Include="GameModel\Blueprints\Footprint.cs" />
     <Compile Include="UI\Button.cs" />
     <Compile Include="Common\Entities\Entity.cs" />
     <Compile Include="Common\Entities\EntityLoader.cs" />
     <Compile Include="UI\CompositeVisibleEntity.cs" />
     <Compile Include="Common\Input\MouseEventManager.cs" />
     <Compile Include="Common\Maths\MathUtil.cs" />
-    <Compile Include="Model\Blueprints\BlueprintManager.cs" />
-    <Compile Include="Model\Blueprints\RoadSegmentBlueprint.cs" />
+    <Compile Include="GameModel\Blueprints\BlueprintManager.cs" />
+    <Compile Include="GameModel\Blueprints\RoadSegmentBlueprint.cs" />
     <Compile Include="Common\Maths\Constants.cs" />
     <Compile Include="Common\Maths\Triangle.cs" />
     <Compile Include="Common\Maths\Vector2i.cs" />
-    <Compile Include="Model\City.cs" />
-    <Compile Include="Model\House.cs" />
-    <Compile Include="Model\Blueprints\HouseBlueprint.cs" />
-    <Compile Include="Model\Building.cs" />
-    <Compile Include="Model\PlayingArea.cs" />
-    <Compile Include="Model\RoadNetwork.cs" />
-    <Compile Include="Model\RoadSegment.cs" />
-    <Compile Include="Model\Terrain\QuadtreeCompiler.cs" />
-    <Compile Include="Model\Terrain\QuadtreeNode.cs" />
-    <Compile Include="Model\Terrain\Terrain.cs" />
-    <Compile Include="Model\World.cs" />
+    <Compile Include="GameModel\City.cs" />
+    <Compile Include="GameModel\House.cs" />
+    <Compile Include="GameModel\Blueprints\HouseBlueprint.cs" />
+    <Compile Include="GameModel\Building.cs" />
+    <Compile Include="GameModel\PlayingArea.cs" />
+    <Compile Include="GameModel\RoadNetwork.cs" />
+    <Compile Include="GameModel\RoadSegment.cs" />
+    <Compile Include="GameModel\Terrains\QuadtreeCompiler.cs" />
+    <Compile Include="GameModel\Terrains\QuadtreeNode.cs" />
+    <Compile Include="GameModel\Terrains\Terrain.cs" />
+    <Compile Include="GameModel\World.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
