--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -205,7 +205,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Common\Graphics\Renderer.cs" />
-    <Compile Include="SceneGraph.cs" />
+    <Compile Include="GameModel\SceneGraph.cs" />
     <Compile Include="Common\Graphics\Camera.cs" />
     <Compile Include="UI\PlayingAreaViewer.cs" />
     <Compile Include="UI\SidebarViewer.cs" />
