Renamed ViewManager to ViewHierarchy.

--- a/game1666proto4/game1666proto4/game1666proto4.csproj
+++ b/game1666proto4/game1666proto4/game1666proto4.csproj
@@ -210,7 +210,7 @@
     <Compile Include="UI\PlayingAreaViewer.cs" />
     <Compile Include="UI\SidebarViewer.cs" />
     <Compile Include="UI\GameView.cs" />
-    <Compile Include="UI\ViewManager.cs" />
+    <Compile Include="UI\ViewHierarchy.cs" />
     <Compile Include="UI\VisibleEntity.cs" />
   </ItemGroup>
   <ItemGroup>
